Made the road and city objects and fixed the onramp function

--- a/Attempt1.ipynb
+++ b/Attempt1.ipynb
@@ -18,10 +18,34 @@
     "        self.mean_leave = mean_leave\n",
     "\n",
     "    def onramp(time):\n",
-    "        z = (time-self.mean_leave) / st_dev\n",
-    "        percentage = stats.norm.sf(abs(z))\n",
-    "        cars_coming_on = percentage*commuters_percentage*self.population\n",
-    "        return cars_coming_on"
+    "        #Calculate the z-score for the normal dist. at the current time and the last time\n",
+    "        z_now = (time-self.mean_leave) / st_dev\n",
+    "        z_last = ((time-1)-self.mean_leave) / st_dev\n",
+    "        #Calculate the probability of a car entering the highway in the last minute\n",
+    "        cdf_now = stats.norm.cdf(z_now)\n",
+    "        cdf_last = stats.norm.cdf(z_last)\n",
+    "        probability = cdf_now - cdf_last\n",
+    "        #Calculate the expected number of cars entering in the last minute\n",
+    "        cars_coming_on = probability*commuters_percentage*self.population\n",
+    "    \n",
+    "class Road:\n",
+    "    free_flow_speed = 110/60 #110 is the free flow speed in km/h, so 110/60 is km/min\n",
+    "    jam_density = 135\n",
+    "    def __init__(self, length, lanes,onramp_city):\n",
+    "        self.length = length\n",
+    "        self.lanes=lanes\n",
+    "        self.city = onramp_city\n",
+    "        self.vehicle_count = 0\n",
+    "        \n",
+    "    def outflow(self):\n",
+    "        density = self.vehicle_count / (self.lanes * self.length)\n",
+    "        outflow = free_flow_speed*density*(1 - (density/jam_density))\n",
+    "        return outflow\n",
+    "    \n",
+    "    def update(self,time,road_inflow):\n",
+    "        onramp_inflow = self.city.onramp(time)\n",
+    "        outflow = self.outflow()\n",
+    "        self.vehicles = self.vehicles + onramp_inflow + road_inflow - outflow"
    ]
   },
   {
@@ -76,8 +100,15 @@
     "import scipy.integrate as integrate \n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "#Setup Our 4 cities\n",
+    "#Note: t = 0 is 5:30 am\n",
     "\n",
+    "#Setup Our 4 cities\n",
+    "cities = [\n",
+    "    City(name=\"Hamilton\",population=747545,mean_leave=100),\n",
+    "    City(name=\"Burlington\",population=183314,mean_leave=115),\n",
+    "    City(name=\"Oakville\",population=193832,mean_leave=135),\n",
+    "    City(name=\"Mississauga\",population=721599,mean_leave=155)\n",
+    "]\n",
     "\n",
     "\n",
     "# defining the SIR model as a function\n",
