Finished the travel time function, added a usage guide to Attemp2.ipynb

--- a/Attempt1.ipynb
+++ b/Attempt1.ipynb
@@ -200,8 +200,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -230,6 +232,13 @@
     "        print(\"If you leave after\",b.time().isoformat(timespec='minutes'),\"you will not make it to Toronto for 9am\")\n",
     "        break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -248,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
