Added a bit more to the usage guide

--- a/Attemp2.ipynb
+++ b/Attemp2.ipynb
@@ -17,7 +17,9 @@
     "\n",
     "Running the second code block produces graphs that show the speed, number of cars, and vehicle flow in the 4 road sections over time. After running the second block, you can run the get_travel_time, which has 2 parameters: The index of the city the driver is starting in, and the start time. The city index should be between 0 and 3, and the start time is an integer where 0 is 5:30 am, and every unit is one minute.\n",
     "\n",
-    "A graph of the travel time for the different cities over the day would be useful. IF t"
+    "A graph of the travel time for the different cities over the day would be useful. If numbers aren't making sense let Dylan or Emily know and we'll look at the code.\n",
+    "\n",
+    "To change the properties of the road, edit the initialize function and the roads in the initialize function. Changing the jam density, or free flow speed will have to be changed in the "
    ]
   },
   {
