Added the length of time travelled function to attempt 1

--- a/Attempt1.ipynb
+++ b/Attempt1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -192,45 +192,58 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# This following section will return the time needed to depart by to arrive for work by 9am"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "If you leave after 08:26 you will not make it to Toronto for 9am\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import datetime\n",
-    "time_travelled = 0\n",
-    "dist_travelled = 0.0\n",
-    "ind = 0\n",
-    "marker = [11.1, 28.1, 41.9, 62.8]\n",
-    "for start_time in range(0,210):\n",
+    "import datetime     \n",
+    "def get_travel_time(start_city_index, start_time):\n",
+    "    time_travelled = 0\n",
+    "    \n",
+    "    #Get the distances at which you cross between roads\n",
+    "    markers = []\n",
+    "    distance = 0\n",
+    "    #now iterate through roads\n",
+    "    road_ind = 0\n",
+    "    while (road_ind < 4):\n",
+    "        distance += roads[road_ind].length\n",
+    "        markers.append(distance)\n",
+    "        road_ind += 1\n",
+    "    \n",
+    "    dist_travelled = markers[start_city_index]\n",
+    "    \n",
+    "    ind = start_city_index\n",
+    "    \n",
     "    while (ind<4):\n",
-    "        if (dist_travelled < marker[ind]):\n",
+    "        if (dist_travelled < markers[ind]):\n",
     "            dist_travelled = dist_travelled + speeds_record[ind][start_time + time_travelled]/60\n",
     "            time_travelled = time_travelled + 1\n",
     "        else: # Commuter moved to the new section\n",
     "            ind = ind + 1\n",
-    "    a = datetime.datetime(100,1,1,5,30)\n",
-    "    b = a + datetime.timedelta(0,start_time*60)\n",
-    "    if (time_travelled + start_time > 210):\n",
-    "        print(\"If you leave after\",b.time().isoformat(timespec='minutes'),\"you will not make it to Toronto for 9am\")\n",
-    "        break"
+    "    return time_travelled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_travel_time(3,0)"
    ]
   },
   {
